<resources>
    <string name="app_name">ToDoList</string>

    <string name="app_title">Todo List</string>
    <string name="add_button">Add</string>

    <string name="add_activity_heading">New Item Add</string>
    <string name="tittle">Tittle</string>
    <string name="description">Description</string>
    <string name="done_button">Done</string>
    <string name="cancel_button">Cancel</string>
</resources>
