<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddItemActivity">

    <LinearLayout
        android:id="@+id/above_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/std_padding2"
        tools:context=".AddActivity">

        <TextView
            android:id="@+id/new_item_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="@dimen/std_padding2"
            android:textStyle="bold"
            android:text="@string/add_activity_heading"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/tittle_et"
            android:background="@drawable/search_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tittle"
            android:inputType="text"
            android:autofillHints="Item1"
            android:padding="@dimen/std_padding2"
            android:layout_margin="@dimen/std_margin1"/>

        <EditText
            android:id="@+id/description_et"
            android:background="@drawable/description_bg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/description"
            android:inputType="none"
            android:autofillHints="This is the description"
            android:padding="@dimen/std_padding2"
            android:layout_margin="@dimen/std_margin1"
            android:gravity="start"
            android:lines="10"
            android:singleLine="false"
            android:maxLines="15"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:layout_gravity="center|bottom"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel_btn"
            android:background="@drawable/button_bg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            android:layout_margin="@dimen/std_margin"/>

        <Button
            android:id="@+id/done_btn"
            android:background="@drawable/button_bg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/done_button"
            android:layout_margin="@dimen/std_margin"/>

    </LinearLayout>

</RelativeLayout>
